fix side bar overflow

--- a/resource/style/style.css
+++ b/resource/style/style.css
@@ -512,7 +512,7 @@ footer .copyright {
     height: 90vh;
     position: fixed;
     top: 1rem;
-    left: 100vw;
+    left: 95vw;
     /* border: 1px solid; */
   }
 
